<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/black"
    tools:context="in.antany.basiccalculator.CalculatorActivity">

    <TextView
        android:id="@+id/text"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:background="@color/ass"
        android:textColor="@color/white"
        android:text="@string/zero"
        android:textSize="70sp"
        android:gravity="end|center_vertical"
        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="70dp"
        android:id="@+id/buttonOne"
        android:layout_below="@+id/text"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="10dp"
        android:textSize="40sp"
        android:tag="1"
        android:onClick="buttonNumClick"
        android:gravity="center|center_vertical"
        android:text="@string/one"
        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="70dp"
        android:id="@+id/buttonTwo"
        android:layout_toRightOf="@+id/buttonOne"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/text"
        android:layout_centerHorizontal="true"
        android:tag="2"
        android:onClick="buttonNumClick"
        android:textSize="40dp"
        android:text="@string/two"
        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="70dp"
        android:id="@+id/buttonThree"
        android:layout_toRightOf="@+id/buttonTwo"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/text"
        android:layout_centerHorizontal="true"
        android:textSize="40dp"
        android:tag="3"
        android:onClick="buttonNumClick"
        android:text="@string/three"
        />


    <Button
        android:layout_width="wrap_content"
        android:layout_height="70dp"
        android:id="@+id/buttonFour"
        android:layout_below="@+id/buttonOne"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="10dp"
        android:textSize="40dp"
        android:tag="4"
        android:onClick="buttonNumClick"
        android:gravity="center|center_vertical"
        android:text="@string/four"
        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="70dp"
        android:id="@+id/buttonFive"
        android:layout_toRightOf="@+id/buttonFour"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/buttonTwo"
        android:layout_centerHorizontal="true"
        android:textSize="40dp"
        android:tag="5"
        android:onClick="buttonNumClick"
        android:text="@string/five"
        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="70dp"
        android:id="@+id/buttonSix"
        android:layout_toRightOf="@+id/buttonFive"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/buttonThree"
        android:layout_centerHorizontal="true"
        android:textSize="40dp"
        android:tag="6"
        android:onClick="buttonNumClick"
        android:text="@string/six"
        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="70dp"
        android:id="@+id/buttonSeven"
        android:layout_below="@+id/buttonFour"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="10dp"
        android:tag="7"
        android:onClick="buttonNumClick"
        android:textSize="40dp"
        android:gravity="center|center_vertical"
        android:text="@string/seven"
        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="70dp"
        android:id="@+id/buttonEight"
        android:layout_toRightOf="@+id/buttonSeven"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/buttonFive"
        android:layout_centerHorizontal="true"
        android:tag="8"
        android:onClick="buttonNumClick"
        android:textSize="40dp"
        android:text="@string/eight"
        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="70dp"
        android:id="@+id/buttonNinie"
        android:layout_toRightOf="@+id/buttonEight"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/buttonSix"
        android:tag="9"
        android:onClick="buttonNumClick"
        android:layout_centerHorizontal="true"
        android:textSize="40dp"
        android:text="@string/nine"
        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="70dp"
        android:id="@+id/buttonDot"
        android:layout_below="@+id/buttonSeven"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="10dp"
        android:textSize="40dp"
        android:gravity="center|center_vertical"
        android:text="@string/dot"
        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="70dp"
        android:id="@+id/buttonZero"
        android:layout_toRightOf="@+id/buttonSeven"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/buttonEight"
        android:layout_centerHorizontal="true"
        android:tag="0"
        android:onClick="buttonNumClick"
        android:textSize="40dp"
        android:text="@string/zero"
        />



    <Button
        android:layout_width="wrap_content"
        android:layout_height="70dp"
        android:id="@+id/buttonEqual"
        android:layout_toRightOf="@+id/buttonZero"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/buttonNinie"
        android:layout_centerHorizontal="true"
        android:textSize="40dp"
        android:text="@string/equals"
        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="58dp"
        android:id="@+id/buttonDel"
        android:layout_toRightOf="@+id/buttonThree"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/text"
        android:layout_centerHorizontal="true"
        android:textSize="20dp"
        android:onClick="buttonClearClick"
        android:text="@string/clear"
        />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="58dp"
        android:id="@+id/buttonPlus"
        android:layout_toRightOf="@+id/buttonSix"
        android:layout_marginTop="5dp"
        android:layout_below="@+id/buttonDel"
        android:layout_centerHorizontal="true"
        android:textSize="20dp"
        android:text="@string/sum"
        />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="58dp"
        android:id="@+id/buttonMinus"
        android:layout_toRightOf="@+id/buttonNinie"
        android:layout_marginTop="5dp"
        android:layout_below="@+id/buttonPlus"
        android:layout_centerHorizontal="true"
        android:textSize="20dp"
        android:text="@string/minus"
        />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="58dp"
        android:id="@+id/buttonMultiply"
        android:layout_toRightOf="@+id/buttonEqual"
        android:layout_marginTop="5dp"
        android:layout_below="@+id/buttonMinus"
        android:layout_centerHorizontal="true"
        android:textSize="20dp"
        android:text="@string/multiply"
        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="58dp"
        android:id="@+id/buttonDivision"
        android:layout_toRightOf="@+id/buttonEqual"
        android:layout_marginTop="5dp"
        android:layout_below="@+id/buttonMultiply"
        android:layout_centerHorizontal="true"
        android:textSize="20dp"
        android:text="@string/division"
        />


</RelativeLayout>
